--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
 canvas{
   border: 1px solid black;
 }
+
+#square {
+  position: absolute;
+  top: 110px;
+  left: 1020px;
+}
+
+#triangle {
+  position: absolute;
+  top: 150px;
+  left: 1020px;
+}
+
+#none {
+  position: absolute;
+  top: 35px;
+  left: 1020px;
+  color: blue;
+}
