--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,36 @@ canvas{
   top: 405px;
   left: 1018px;
 }
+
+#bar {
+  position: absolute;
+  top: 445px;
+  left: 1028px;
+}
+#box {
+  color: blue;
+  position: absolute;
+  top: 520px;
+  left: 1023px;
+}
+
 #none {
   position: absolute;
   top: 35px;
   left: 1020px;
+  color: blue;
+}
+
+#delete {
+  position: absolute;
+  top: 535px;
+  left: 1020px;
+  color: blue;
+}
+
+#concave {
+  position: absolute;
+  top: 460px;
+  left: 1023px;
   color: blue;
 }
