Made motion time driven

--- a/css/style.css
+++ b/css/style.css
@@ -1,94 +1,106 @@
 canvas{
   border: 1px solid black;
 }
-
+#play {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
 #square {
   position: absolute;
   top: 110px;
-  left: 1020px;
+  left: 20px;
 }
 
 #triangle {
   position: absolute;
   top: 145px;
-  left: 1020px;
+  left: 20px;
 }
 
 #pentagon {
   position: absolute;
   top: 183px;
-  left: 1020px;
+  left: 20px;
 }
 
 #hexagon {
   position: absolute;
   top: 217px;
-  left: 1018px;
+  left: 18px;
 }
 
 #circle {
   position: absolute;
   top: 255px;
-  left: 1018px;
+  left: 18px;
 }
 
 #plus {
   position: absolute;
   top: 295px;
-  left: 1018px
+  left: 18px
 }
 
 #arrow {
   position: absolute;
   top: 330px;
-  left: 1018px;
+  left: 18px;
 }
 
 #star {
   position: absolute;
   top: 360px;
-  left: 1018px;
+  left: 18px;
 }
 
 #tShape {
   position: absolute;
   top: 405px;
-  left: 1018px;
+  left: 18px;
 }
 
 #bar {
   position: absolute;
   top: 445px;
-  left: 1028px;
+  left: 28px;
 }
 #box {
   color: blue;
   position: absolute;
   top: 520px;
-  left: 1023px;
+  left: 23px;
 }
 
 #none {
   position: absolute;
   top: 35px;
-  left: 1020px;
+  left: 20px;
   color: blue;
 }
 
 #_delete {
   position: absolute;
   top: 535px;
-  left: 1020px;
+  left: 20px;
   color: blue;
 }
 
 #concave {
   position: absolute;
   top: 460px;
-  left: 1023px;
+  left: 23px;
   color: blue;
 }
 
 .selected{
-  border: 2px solid black
+  border: 2px solid black;
+}
+
+#wrapper{
+  position: absolute;
+  top: 68px;
+  left: 1010px;
+  height: 600px;
+  width: 100px;
 }
