--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -153,7 +153,8 @@ canvas {
 
 #_delete {
   position: absolute;
-  top: 535px;
+  font-size: 15px;
+  top: 548px;
   left: 20px;
   color: blue;
 }
