--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -1,52 +1,55 @@
 table {
-    width: 50%;
-    height: 200px;
+  width: 50%;
+  height: 200px;
 }
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
 }
-th, td {
-    padding: 5px;
-    text-align: left;
+th,
+td {
+  padding: 5px;
+  text-align: left;
 }
 table tr:nth-child(even) {
-    background-color: #eee;
+  background-color: #eee;
 }
 table tr:nth-child(odd) {
-   background-color:#fff;
+  background-color: #fff;
 }
 table th {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
 li {
-    float: left;
+  float: left;
 }
 
 li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 li a:hover:not(.active) {
-    background-color: #111;
+  background-color: #111;
 }
 
 .active {
-    background-color: #4CAF50;
+  background-color: #4caf50;
 }
 
 #log {
@@ -110,7 +113,7 @@ canvas {
 #plus {
   position: absolute;
   top: 280px;
-  left: 18px
+  left: 18px;
 }
 
 #arrow {
@@ -174,6 +177,6 @@ canvas {
   color: blue;
 }
 
-.selected{
+.selected {
   border: 2px solid black;
 }
