--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-canvas{
+canvas {
   border: 1px solid black;
 }
 #play {
@@ -39,7 +39,7 @@ canvas{
 #plus {
   position: absolute;
   top: 295px;
-  left: 18px
+  left: 18px;
 }
 
 #arrow {
@@ -93,11 +93,11 @@ canvas{
   color: blue;
 }
 
-.selected{
+.selected {
   border: 2px solid black;
 }
 
-#wrapper{
+#wrapper {
   position: absolute;
   top: 68px;
   left: 1010px;
