--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -196,3 +196,17 @@ canvas {
   left: 20px;
   color: blue;
 }
+
+.button {
+  background-color: #f44336; /* Green */
+  border: none;
+  color: #ffffff;
+  padding: 15px 32px;
+  text-align: center;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  margin: 16px 0 !important;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+}
