--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -214,4 +214,15 @@ canvas {
 .eventsWrapper {
   position: relative;
   top: 680px;
+  border: 1px solid;
+  width: 50%;
+  margin-bottom: 30px;
+  padding: 15px;
+}
+
+.rule {
+  background-color: lightgrey;
+  padding: 10px;
+  margin-top: 15px;
+  border: 1px solid;
 }
