--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -64,138 +64,40 @@ li a:hover:not(.active) {
 }
 
 canvas {
-  position: relative;
+  /* position: relative;
   top: 10px;
   left: 60px;
-  border: 1px solid black;
+  border: 1px solid black; */
+}
+
+.canvasWrapper {
+  display: flex;
 }
 
 .buttons {
-  position: absolute;
-  top: 60px;
-  left: 0px;
+  width: fit-content;
+  border: 0.5px solid blue;
+  display: grid;
+  grid-template-columns: 50px 50px;
+  gap: 10px;
+  margin-right: 20px;
 }
 
-#play {
-  position: absolute;
-  top: 20px;
-  left: 20px;
+.image_wrapper {
+  display: flex;
+  background-color: rgb(248, 246, 246);
+  transition: background-color 0.5s;
 }
-#square {
-  position: absolute;
-  top: 95px;
-  left: 20px;
+div.image_wrapper:hover {
+  background-color: lightblue;
 }
 
-#triangle {
-  position: absolute;
-  top: 130px;
-  left: 20px;
+.image_wrapper > img {
+  margin: auto;
 }
 
-#pentagon {
-  position: absolute;
-  top: 168px;
-  left: 20px;
-}
-
-#hexagon {
-  position: absolute;
-  top: 202px;
-  left: 18px;
-}
-
-#circle {
-  position: absolute;
-  top: 240px;
-  left: 18px;
-}
-
-#plus {
-  position: absolute;
-  top: 280px;
-  left: 18px;
-}
-
-#arrow {
-  position: absolute;
-  top: 315px;
-  left: 18px;
-}
-
-#star {
-  position: absolute;
-  top: 345px;
-  left: 18px;
-}
-
-#tShape {
-  position: absolute;
-  top: 390px;
-  left: 18px;
-}
-
-#bar {
-  position: absolute;
-  top: 430px;
-  left: 28px;
-}
-#box {
-  color: blue;
-  position: absolute;
-  top: 505px;
-  left: 23px;
-}
-
-#none {
-  position: absolute;
-  font-size: 15px;
-  top: 50px;
-  left: 20px;
-  color: blue;
-}
-
-#_delete {
-  position: absolute;
-  font-size: 15px;
-  top: 533px;
-  left: 20px;
-  color: blue;
-}
-
-#step {
-  position: absolute;
-  font-size: 15px;
-  top: 560px;
-  left: 20px;
-  color: blue;
-}
-
-#concave {
-  position: absolute;
-  top: 445px;
-  left: 23px;
-  color: blue;
-}
-
-.selected {
-  border: 2px solid black;
-}
-
-#save {
-  position: absolute;
-  font-size: 15px;
-  top: 585px;
-  left: 20px;
-  color: blue;
-}
-
-#update {
-  position: absolute;
-  font-size: 15px;
-  top: 613px;
-  left: 20px;
-  color: blue;
+.image_wrapper.selected {
+  background-color: lightblue;
 }
 
 .button {
