--- a/client/src/ui/components/data_control/ColourPalette.css
+++ b/client/src/ui/components/data_control/ColourPalette.css
@@ -1,23 +1,43 @@
-.colour_options {
+.palette_wrapper {
+  display: grid;
+  grid-template-columns: auto auto;
   width: 100%;
   height: 100%;
   background-color: lightgray;
+  padding: 10px 0;
+}
+
+.colour_options {
   display: grid;
   grid-template-columns: repeat(5, 25px);
   column-gap: 0;
+  width: fit-content;
+  height: 100%;
+  background-color: lightgray;
 }
 
 .colour_option {
   width: 25px;
   height: 25px;
-  /* border: 1px solid black; */
 }
 
 .colour_option:hover {
-  /* width: 30px;
-  height: 30px; */
   border: 2px solid blue;
 }
 .transparent {
   border: 1px solid black;
+}
+
+.selected_colour {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+}
+
+li.color > label > span.label-text {
+  width: 100% !important;
+}
+
+li.color {
+  width: 100%;
 }
